Fix footer on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ footer {
 
     .wrapper {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     a {
@@ -104,5 +106,12 @@ footer {
         height: 100%;
         width: 10px;
         background-size: 200% auto;
+    }
+
+    .footer {
+        .wrapper {
+            justify-content: space-between;
+            flex-direction: row;
+        }
     }
 }
